--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -318,10 +318,12 @@
         }
     }
     .left_column {
-        border: 1px solid #D5D5D5;
-        border-radius: 3px;
+        border: 0.1rem solid #d5d5d5;
+        border-radius: 0.3rem 0 0 0.3rem;
         width: 55%;
         @include width-up-to($phone-max) {
+            border: 0.1rem solid #d5d5d5;
+            border-radius: 0.3rem;
             display: block;
             width: 100%;
         }
@@ -333,14 +335,15 @@
         }
     }
     .right_column {
-        border-top: 1px solid #D5D5D5;
-        border-bottom: 1px solid #D5D5D5;
-        border-right: 1px solid #D5D5D5;
-        border-radius: 3px;
+        border-top: 0.1rem solid #d5d5d5;
+        border-right: 0.1rem solid #d5d5d5;
+        border-bottom: 0.1rem solid #d5d5d5;
+        border-radius: 0 0.3rem 0.3rem 0;
         width: 45%;
         @include width-up-to($phone-max) {
             margin-top: 1rem;
-            border-left: 1px solid #D5D5D5;
+            border: 0.1rem solid #d5d5d5;
+            border-radius: 0.3rem;
             width: 100%;
         }
     }
@@ -406,7 +409,6 @@
         display: none;
     }
     .toggle_dataList_body {
-        border-radius: 3px;
         background-color: #FFFFFF;
         margin-top: 15px;
         @include width-up-to($phone-max) {
@@ -450,8 +452,9 @@
         }
     }
     .tdlb_container {
-        padding: 5rem 2rem 3rem 2rem;
         border: 1px solid #d5d5d5;
+        border-radius: 3px;
+        padding: 5rem 2rem 3rem 2rem;
         @include width-up-to($phone-max) {
             padding: 0;
             margin: 1rem;
