--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -19,6 +19,7 @@
                 </div>
             </div>
         <div class="toggle_dataList_footer">
-            <span id="sub_testimonial">submit your testimonials</span> >
+            <span class="sub-testimonial">submit your testimonials</span>
+            <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
         </div>
 </template>
