remove margin-tops for making responsive search bar results for mobile screens

--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -19,6 +19,6 @@
             </div>
         </li>
     </ul>
-    <div id="detailinfoMOb" class="detailinfoMOb"></div>
+    <div id="detail-info-mob" class="detail-info-mob"></div>
     <div id="testimonial-body-mob" class="testimonial-body-mob"></div>
 </template>
