--- a/src/app/pages/impact-dev/map/schoolinfo.html
+++ b/src/app/pages/impact-dev/map/schoolinfo.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="list-data detailInfoHead">
+    <div class="list-data detail-info-head">
         <div class="list-heading">{model.dataArray[model.itemIndex].fields.name}</div>
         <div class="list-address">{model.dataArray[model.itemIndex].fields.physical_city}, {model.dataArray[model.itemIndex].fields.physical_state_province}</div>
     </div>
