Resolve training wheel-open menu conflict

--- a/src/app/components/technology-selector/technology-selector.scss
+++ b/src/app/components/technology-selector/technology-selector.scss
@@ -17,7 +17,9 @@
         margin-top: $normal-margin;
 
         :nth-child(10),
-        :nth-child(20) {
+        :nth-child(20),
+        :nth-child(30),
+        :nth-child(40) {
             margin-bottom: 3rem;
         }
     }
