--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -379,7 +379,27 @@
         flex-direction: row;
 
         @include width-up-to($phone-max) {
+        }
+    }
+
+    .nxt-previous-links {
+        display: none;
+
+        @include width-up-to($phone-max) {
+            cursor: pointer;
+            display: block;
+            width: 3%;
+        }
+    }
+
+    .content-container {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+
+        @include width-up-to($phone-max) {
             flex-direction: column;
+            width: 94%;
         }
     }
 
@@ -412,6 +432,7 @@
             border-left: 0.1rem solid #d5d5d5;
             border-radius: 0.3rem;
             display: block;
+            margin-bottom: 1rem;
             margin-top: 1rem;
             width: 100%;
         }
@@ -511,7 +532,6 @@
 
         @include width-up-to($phone-max) {
             display: block;
-            margin-top: 1rem;
         }
     }
 
@@ -735,8 +755,7 @@
     .detail-info-mob {
         background: white;
         display: none;
-        padding-left: 1rem;
-        padding-right: 1rem;
+        width: 100%;
     }
 
     .testimonial-body-mob {
