--- a/src/app/pages/impact-dev/map/schoolinfo.html
+++ b/src/app/pages/impact-dev/map/schoolinfo.html
@@ -1,22 +1,28 @@
 <template args="model">
-    <div class="list-data detail-info-head">
-        <div class="list-heading">{model.dataArray[model.itemIndex].fields.name}</div>
-        <div class="list-address">{model.dataArray[model.itemIndex].fields.physical_city}, {model.dataArray[model.itemIndex].fields.physical_state_province}</div>
-    </div>
-    <div class="left-column">
-        <div class="left-column-inner">
-            <div class="lcolumn-head">Student savings</div>
-            <div class="lcolumn-body">
-                <div class="lcol-body-left">This year: ${model.dataArray[model.itemIndex].fields.current_year_savings}</div>
-                <div class="lcol-body-right">Cumulative: ${model.dataArray[model.itemIndex].fields.all_time_savings}</div>
+    <div class="left-btn-link nxt-previous-links" data-index={model.itemIndex} data-action="previous"></div>
+    <div class="content-container">
+        <div class="list-data detail-info-head">
+            <div class="list-heading">{model.dataArray[model.itemIndex].fields.name}</div>
+            <div class="list-address">{model.dataArray[model.itemIndex].fields.physical_city},{model.dataArray[model.itemIndex].fields.physical_state_province}</div>
+        </div>
+        <div class="left-column">
+            <div class="left-column-inner">
+                <div class="lcolumn-head">Student savings</div>
+                <div class="lcolumn-body">
+                    <div class="lcol-body-left">This year:
+                        ${model.dataArray[model.itemIndex].fields.current_year_savings}</div>
+                    <div class="lcol-body-right">Cumulative:
+                        ${model.dataArray[model.itemIndex].fields.all_time_savings}</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="right-column">
-        <div class="right-column-inner">
-            <div class="rcolumn-head">OpenStax Institutional Partner</div>
-            <div class="rcolumn-body">Yes</div>
+        <div class="right-column">
+            <div class="right-column-inner">
+                <div class="rcolumn-head">OpenStax Institutional Partner</div>
+                <div class="rcolumn-body">Yes</div>
+            </div>
         </div>
+        <div id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
     </div>
-    <div id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
+    <div class="right-btn-link nxt-previous-links" data-index={model.itemIndex} data-action="next"></div>
 </template>
