--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -291,11 +291,31 @@
         padding-right: 1rem;
     }
 
+    .list-show-more {
+        align-items: center;
+        background-color: #e5e5e5;
+        border-radius: 50%;
+        display: flex;
+        height: 3.2rem;
+        justify-content: center;
+        text-align: center;
+        width: 3.2rem;
+        
+        @include width-up-to($phone-max) {
+            width: 10%;
+        }
+    }
+
     .list-data {
         display: flex;
         flex-direction: column;
         padding-bottom: 2rem;
         padding-top: 2rem;
+
+        @include width-up-to($phone-max) {
+            padding-bottom: 0.7rem;
+            width: 90%;
+        }
     }
 
     .angle-circle {
@@ -334,10 +354,6 @@
             color: #4a4a4a;
             font-size: 1.63rem;
             font-weight: bold;
-            height: 1.9rem;
-            line-height: 1.9rem;
-            margin-bottom: unset;
-            width: 29.2rem;
         }
     }
 
@@ -379,6 +395,7 @@
             border: 0.1rem solid #d5d5d5;
             border-radius: 0.3rem;
             display: block;
+            margin-top: 1rem;
             width: 100%;
         }
     }
@@ -598,12 +615,12 @@
     }
 
     .filter-btn {
-        background-color: #ffffff;
+        background-color: #fff;
         border: 0.1rem solid #d5d5d5;
         border-radius: 0.2rem;
 
         @include width-up-to($phone-max) {
-            height: 3.2rem;            
+            height: 3.2rem;
             margin: unset;
             width: 3.2rem;
         }
