--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -329,6 +329,10 @@
         justify-content: center;
         text-align: center;
         width: 3.2rem;
+        
+        @include width-up-to($phone-max) {
+            width: 10%;
+        }
     }
 
     .list-data {
@@ -339,6 +343,7 @@
 
         @include width-up-to($phone-max) {
             padding-bottom: 0.7rem;
+            width: 90%;
         }
     }
 
@@ -371,7 +376,6 @@
             color: #4a4a4a;
             font-size: 1.6rem;
             font-weight: bold;
-            height: 1.9rem;
         }
     }
 
@@ -413,6 +417,7 @@
             border: 0.1rem solid #d5d5d5;
             border-radius: 0.3rem;
             display: block;
+            margin-top: 1rem;
             width: 100%;
         }
     }
@@ -625,12 +630,12 @@
     }
 
     .filter-btn {
-        background-color: #ffffff;
+        background-color: #fff;
         border: 0.1rem solid #d5d5d5;
         border-radius: 0.2rem;
 
         @include width-up-to($phone-max) {
-            height: 3.2rem;            
+            height: 3.2rem;
             margin: unset;
             width: 3.2rem;
         }
