hide testimonial if null

--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div id="data-{element.pk}" class="toggle-dataList data-{element.pk}">
-                <div class="detailinfo-{element.pk}"></div>
+                <div class="detailinfo-{element.pk} detailinfo-container"></div>
                 <div id="testimonialBody-{element.pk}" class="testimonialBody-{element.pk}"></div>
             </div>
         </li>
