--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -1,4 +1,4 @@
-<template args="model">
+<template args="model" if="model.dataArray[model.itemIndex].fields.testimonial!=null">
             <div class="tdlb-container">
                 <div class="tdlb-para">
                     <div id="testimonialHead-{model.itemIndex}" class="testimonial_he">Testimonials</div>
