fixing blue background height issue of impact map page

--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -108,7 +108,7 @@
     .on-map {
         background-color: #002469;
         bottom: 35.8rem;
-        height: 80rem;
+        height: 95rem;
         opacity: 0.8;
         overflow: hidden;
         position: relative;
@@ -295,14 +295,14 @@
         border-radius: 0.3rem;
         list-style-type: none;
         margin: unset;
-        max-height: 28.8rem;
+        max-height: 28rem;
         overflow-x: hidden;
         overflow-y: scroll;
         padding-left: unset;
         width: 100%;
 
         @include width-up-to($phone-max) {
-            max-height: 21rem;
+            max-height: 23rem;
             overflow-y: scroll;
         }
     }
@@ -312,6 +312,10 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .toggle-dataList {
+        display: none;
     }
 
     .search-list-element {
@@ -329,10 +333,6 @@
         justify-content: center;
         text-align: center;
         width: 3.2rem;
-        
-        @include width-up-to($phone-max) {
-            width: 10%;
-        }
     }
 
     .list-data {
@@ -340,10 +340,10 @@
         flex-direction: column;
         padding-bottom: 2rem;
         padding-top: 2rem;
+        width: 90%;
 
         @include width-up-to($phone-max) {
-            padding-bottom: 0.7rem;
-            width: 90%;
+            padding-bottom: 1rem;
         }
     }
 
@@ -356,7 +356,7 @@
         font-size: 1.4rem;
         height: 1.6rem;
         line-height: 1.6rem;
-        margin-top: 1.5rem;
+        margin-top: 1.3rem;
 
         @include width-up-to($phone-max) {
             color: #4a4a4a;
@@ -503,10 +503,8 @@
 
     .toggle-datalist-body {
         background-color: white;
-        margin-top: 1.5rem;
 
         @include width-up-to($phone-max) {
-            margin-top: 0;
             padding-bottom: 0.3rem;
             padding-top: 0.3rem;
         }
@@ -756,6 +754,10 @@
         @include width-up-to($phone-max) {
             padding-top: 0.5rem;
         }
+    }
+
+    .detailinfo-container {
+        margin-bottom: 1.3rem;
     }
 
     .detail-info-mob {
