Fix seach box styling for tablet

--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -59,16 +59,34 @@
         position: relative;
         width: 67.8rem;
         z-index: 99999;
+
+        @include width-up-to($tablet-max) {
+            display: flex;
+            flex-direction: column;
+            height: 42rem;
+            justify-content: flex-end;
+            margin-left: unset;
+            margin-top: 0;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            width: 100%;
+        }
     }
 
-    // #map {
-    //     height: 74rem;
-    //     opacity: 1;
-    //     overflow: hidden;
-    //     position: relative;
-    //     top: -3rem;
-    //     width: 100%;
-    // }
+    .search-div-container {
+        box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.3);
+        width: 63.4rem;
+
+        @include width-up-to($tablet-max) {
+            max-width: 63.4rem;
+            order: 2;
+            width: 100%;
+        }
+    }
+
+    .separate-map-link {
+        display: unset;
+    }
 
     .maptxt {
         color: white;
@@ -113,9 +131,10 @@
         border-radius: 0.3rem;
         display: flex;
         height: 6.7rem;
+        padding: 0 1rem;
         width: 63.4rem;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             height: 6rem;
             width: 100%;
 
@@ -124,24 +143,44 @@
                 width: 90%;
             }
 
-            .filter-btn {
-                border: 0.1rem solid #d5d5d5;
-                border-radius: 0.3rem;
-                height: 3.2rem;
-                width: 3.4rem;
+            .search-filter-div {
+                order: 2;
             }
+        }
 
-            .filter-style {
-                font-size: 1.5rem;
-                margin-left: -0.5rem;
-                margin-top: -0.2rem;
-            }
+        .search-input-div {
+            flex-grow: 1;
+            padding-right: 1rem;
+        }
+    }
 
-        @include width-up-to($phone-max) {
+    .srch {
+        border: 0.1rem solid white;
+        border-radius: 0.3rem;
+        color: #4a4a4a;
+        font-size: 1.6rem;
+        height: 3.83rem;
+        transition: all 0.3s ease-in-out;
+        width: 100%;
+
+        @include width-up-to($tablet-max) {
             font-size: 1.4rem;
             padding: 0.6rem;
-            width: 97.5%;
         }
+
+        @include width-up-to($phone-max) {
+            height: auto;
+        }
+
+    }
+
+    .back-search-div,
+    .back-result-div,
+    .back-detail-div {
+        display: none;
+        margin-bottom: 1rem;
+        order: 2;
+    }
 
     .back-search-btn,
     .back-result-btn,
@@ -161,7 +200,7 @@
         border-top: 0.1rem solid #d5d5d5;
         width: 63.4rem;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             border-top: unset;
             width: 100%;
         }
@@ -255,25 +294,35 @@
         padding-left: unset;
         width: 63.4rem;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             border-top: 0.1rem solid #d5d5d5;
+            max-width: 63.4rem;
             order: 3;
             width: 100%;
         }
     }
 
+    .search-empty-result {
+        background-color: white;
+        border-radius: 0 0 0.3rem 0.3rem;
+        font-size: 1.4rem;
+        overflow-x: hidden;
+        padding: 1.5rem;
+        width: 100%;
+    }
+
     .search-list {
         background-color: white;
-        border-radius: 0.3rem;
+        border-radius: 0 0 0.3rem 0.3rem;
         list-style-type: none;
         margin: unset;
-        max-height: 28rem;
+        max-height: calc(100vh - 23.8rem);
         overflow-x: hidden;
         overflow-y: scroll;
         padding-left: unset;
 
-        @include width-up-to($phone-max) {
-            max-height: 23rem;
+        @include width-up-to($tablet-max) {
+            max-height: 21rem;
             overflow-y: scroll;
         }
     }
@@ -311,10 +360,10 @@
         flex-direction: column;
         padding-bottom: 2rem;
         padding-top: 2rem;
-        width: 90%;
+        width: calc(100% - 4.2rem);
 
-        @include width-up-to($phone-max) {
-            padding-bottom: 1rem;
+        @include width-up-to($tablet-max) {
+            padding-bottom: 0.7rem;
         }
     }
 
@@ -332,7 +381,7 @@
         line-height: 1.6rem;
         margin-top: 1.3rem;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             color: #4a4a4a;
             font-size: 1.4rem;
             height: 1.6rem;
@@ -349,8 +398,9 @@
         font-weight: bold;
         height: 2.2rem;
         line-height: 2.3rem;
+        max-width: 100%;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             color: #4a4a4a;
             font-size: 1.63rem;
             font-weight: bold;
@@ -361,26 +411,7 @@
         display: flex;
         flex-direction: row;
 
-        @include width-up-to($phone-max) {
-        }
-    }
-
-    .nxt-previous-links {
-        display: none;
-
-        @include width-up-to($phone-max) {
-            cursor: pointer;
-            display: block;
-            width: 3%;
-        }
-    }
-
-    .content-container {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             flex-direction: column;
             width: 94%;
         }
@@ -391,7 +422,7 @@
         border-radius: 0.3rem 0 0 0.3rem;
         width: 55%;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             border: 0.1rem solid #d5d5d5;
             border-radius: 0.3rem;
             display: block;
@@ -411,7 +442,8 @@
         border-top: 0.1rem solid #d5d5d5;
         width: 45%;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
+            border: 0.1rem solid #d5d5d5;
             border-left: 0.1rem solid #d5d5d5;
             display: block;
             margin-bottom: 1rem;
@@ -517,7 +549,7 @@
         line-height: 1.7rem;
         padding: 2rem 1rem;
 
-        @include width-up-to($phone-max) {
+        @include width-up-to($tablet-max) {
             display: block;
         }
     }
@@ -526,10 +558,6 @@
         display: none;
         font-size: 1.4rem;
         font-weight: bold;
-
-        @include width-up-to($phone-max) {
-            display: block;
-        }
     }
 
     .tdlb-container {
@@ -611,7 +639,7 @@
     }
 
     .filter-btn {
-        background-color: #fff;
+        background-color: white;
         border: 0.1rem solid #d5d5d5;
         border-radius: 0.2rem;
 
@@ -739,8 +767,8 @@
     }
 
     .searchimg {
-        width: 2rem;
         padding-top: 0.2rem;
+        width: 2rem;
 
         @include width-up-to($phone-max) {
             padding-top: 0.5rem;
@@ -759,29 +787,41 @@
 
     .testimonial-body-mob {
         display: none;
+
+        @include width-up-to($tablet-max) {
+            background: white;
+            border-radius: 0.3rem;
+            padding: 0 1rem;
+        }
+
     }
 
     .detail-info-head {
         display: none;
 
-            .apply-filter {
-                margin-left: 16.2rem;
-                padding-bottom: 0.9rem;
-            }
+        @include width-up-to($tablet-max) {
+            display: block;
         }
     }
 
     .search-img-div {
-        margin-left: 2rem;
         margin-right: 1.7rem;
 
-        @include width-up-to($phone-max) {
-            margin-left: 1rem;
+        @include width-up-to($tablet-max) {
             margin-right: 0;
         }
     }
 
-    .searchimg {
-        width: 2rem;
+    .sub-testimonial {
+        padding-right: 1rem;
+        text-decoration: underline;
+    }
+
+    .sub-testimonial-icon {
+
+        svg {
+            height: 1.25rem;
+            width: 0.75rem;
+        }
     }
 }
