--- a/src/app/pages/separatemap/separatemap.scss
+++ b/src/app/pages/separatemap/separatemap.scss
@@ -5,28 +5,43 @@
 }
 
 .mapd {
-    height: 100%;
+    bottom: 0;
+    height: calc(100% - 11rem);
+    left: 0;
+    margin-top: 11rem;
+    position: absolute;
+    right: 0;
+    top: 0;
     width: 100%;
     position: absolute;
     top: 0;
 
     @include width-up-to($tablet-max) {
+        display: flex;
+        flex-direction: column-reverse;
+        height: calc(100% - 5.2rem);
+        margin-top: 5.2rem;
         top: 0;
     }
 
-    @include width-up-to($phone-max) {
-        display: flex;
-        flex-direction: column-reverse;
-        height: 100%;
-        position: absolute;
-    }
+}
+
+.back-impact-btn {
+    background-color: white;
+    border-radius: 2.8rem;
+    box-shadow: 0 1rem 3rem 0 rgba(0, 0, 0, 0.3);
+    height: 4rem;
+    width: 4rem;
+}
 
 .back-impact-div {
-    align-self: end;
-    position: absolute;
-    right: 6rem;
+    bottom: 2rem;
+    position: fixed;
+    right: 2rem;
+    top: auto;
 
     @include width-up-to($phone-max) {
+        bottom: auto;
         right: 2rem;
         top: 8rem;
         z-index: 99999;
